# pheval_semphen

./: .cruft.json  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
docs/: conf.py  index.rst
src/pheval_semphen/: __init__.py  cli.py  runner.py  semphen.py
src/pheval_semphen/post_process/: post_process.py
src/pheval_semphen/prepare/: tool_specific_configuration_options.py
src/pheval_semphen/run/: run.py
src/pheval_semphen/test_configs/: config.yaml
src/pheval_semphen/test_output/: Badin-2017-RUNX1-Pedigree_I,_V_2_results.tsv  results.yml
tests/: __init__.py  demo_test.py
