[tool.poetry]
name = "pheval_semphen"
version = "0.1.0"
description = "Pheval runner for semsimian + phenio db + MONDO (semphen) for disease prioritization via phenotype similarities"
authors = ["Aaron Odell <aaron@tislab.org>"]
readme = "README.md"
packages = [{ include = "pheval_semphen", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "*"
importlib-metadata = ">=8.2.0"
pheval = "^0.3.9"
semsimian = ">=0.2.17"

[tool.poetry.group.dev.dependencies]
pytest = {version = ">=8.3.2"}
tox = {version = ">=4.16.0"}
pre-commit = {version = ">=3.3.3"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = {version = ">=6.1.3"}
sphinx-rtd-theme = {version = ">=1.0.0"}
sphinx-autodoc-typehints = {version = ">=1.2.0"}
sphinx-click = {version = ">=4.3.0"}
myst-parser = {version = ">=0.18.1"}

[tool.poetry.scripts]
pheval-semphen = "pheval_semphen.semphen:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]

[tool.ruff]
lint.extend-ignore = [
    "D211",  # `no-blank-line-before-class`
    "D212",  # `multi-line-summary-first-line`
    "D203",  # `blank-line-before-docstring`
    ]
line-length = 120

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]

# Select or ignore from https://beta.ruff.rs/docs/rules/
lint.select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # Warning
]

lint.unfixable = []
target-version = "py310"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml"
count = ""
quiet-level = 3
# ignore-words-list = ""

[tool.poetry.plugins."pheval.plugins"]
customrunner = "pheval_semphen.runner:SemphenPhevalRunner"

## Breaks when trying to publish via git actions 
##[build-system]
##requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
##build-backend = "poetry_dynamic_versioning.backend"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"